# ZoF

./: Makefile.am  configure.ac
cmd/: Makefile.am  Makefile.bsd.inc
cmd/zdb/: zdb.c
cmd/zfs/: zfs_main.c
cmd/zinject/: translate.c  zinject.c
cmd/zpool/: Makefile.am  Makefile.bsd  linux_zpool_vdev.c  zpool_main.c
cmd/ztest/: Makefile.am  ztest.c
config/: kernel.m4  user.m4
include/: Makefile.am  libzfs.h  libzfs_impl.h
include/os/freebsd/spl/sys/: ccompile.h  kcondvar.h
include/os/freebsd/zfs/sys/: zfs_znode.h
include/sys/: Makefile.am  abd.h  debug.h  refcount.h  spa_impl.h  vdev.h  vdev_impl.h  zfs_context.h
include/sys/fs/: zfs.h
lib/: Makefile.am  Makefile.bsd.inc
lib/libavl/: Makefile.am
lib/libicp/: Makefile.am
lib/libnvpair/: Makefile.am
lib/libspl/: Makefile.am  Makefile.bsd
lib/libspl/asm-generic/: Makefile.am
lib/libspl/include/sys/: file.h  mnttab.h  mount.h  param.h
lib/libtpool/: Makefile.am
lib/libunicode/: Makefile.am
lib/libuutil/: Makefile.am
lib/libzfs/: Makefile.am  libzfs_compat.c  libzfs_config.c  libzfs_dataset.c  libzfs_ioctl_compat.c  libzfs_pool.c  libzfs_sendrecv.c  libzfs_util.c  linux_libzfs_mount.c
lib/libzfs_core/: Makefile.am  Makefile.bsd  libzfs_core.c
lib/libzpool/: Makefile.am  Makefile.bsd
module/: .gitignore  Makefile.am  Makefile.bsd
module/avl/: Makefile.am
module/lua/: Makefile.am
module/nvpair/: Makefile.am
module/os/freebsd/spl/: Makefile.am  opensolaris_kstat.c
module/os/freebsd/zfs/: Makefile.am  freebsd_kmod.c  freebsd_sysctl.c  zfs_znode.c
module/os/linux/zfs/: vdev_disk.c
module/unicode/: Makefile.am
module/zcommon/: Makefile.am  zfeature_common.c  zprop_common.c
module/zfs/: Makefile.am  arc.c  dbuf.c  dmu.c  dmu_objset.c  dmu_send.c  dnode.c  dsl_pool.c  dsl_scan.c  refcount.c  spa.c  spa_misc.c  spa_stats.c  vdev.c  vdev_indirect.c  vdev_indirect_mapping.c  zap_micro.c  zfs_ioctl.c  zio.c
scripts/: zfs-tests.sh
tests/zfs-tests/cmd/libzfs_input_check/: libzfs_input_check.c
tests/zfs-tests/tests/functional/: Makefile.am
tests/zfs-tests/tests/functional/acl/nfsv4/: nfsv4_allow.ksh  nfsv4_common.kshlib  nfsv4_deny.ksh  nfsv4_omit.ksh  setup.ksh
